--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="actor_name_or_surname">Actor name or surname</string>
     <string name="aaron">Aaron</string>
     <string name="hey_you">Hey you!</string>
+    <string name="is_favorite">is favorite</string>
 </resources>
