Added search bar at the top of every Activity that have Dialogs Recycler

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="choose_where_is_directory">Chose directory where your resources files are located</string>
     <string name="resources_directory">Resources directory</string>
     <string name="favorites">Favorites</string>
+    <string name="filter">Filter</string>
 </resources>
