--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="resources_directory">Resources directory</string>
     <string name="favorites">Favorites</string>
     <string name="filter">Filter</string>
+    <string name="small_talk">Smalltalk</string>
 </resources>
